[package]
name = "arrays_rrb_vector"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "arrays_rrb_vector"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
rustler_stored_term = "0.1.0"
rustler_elixir_fun = "0.1.1"
# serde_rustler = "0.0.3" # Not supported for OTP 24 yet.
im = "15.0.0"
owning_ref = "0.4.1"

[profile.release]
# lto = true
debug = true